# Mindbook

./: .dockerignore  .env.sample  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  start.sh
src/: server.py
src/agents/simple_agent/: agent.py
src/agents/supervisor_agent/: agent.py
src/config/: index.py  logging.py
src/middleware/: logging_middleware.py
src/models/: index.py
src/rag/ingestion/: index.py  utils.py
src/rag/retreival/: index.py
src/rag/retrieval/: index.py  utils.py
src/routes/: projectFilesRoutes.py  projectRoutes.py  userRoutes.py
src/services/: celery.py  cloudflareR2.py  llm.py  scrapedo_client.py  supabase.py  webScrapper.py
src/utils/: index.py
supabase/migrations/: 20260114024043_initial_schema.sql  20260114025653_chunks_search_function.sql
